[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ahab"
version = "2.0.0"
description = "Interactive Docker Remote API exploitation tool for authorized pentesting"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "requests==2.32.3",
    "urllib3==2.3.0",
]

[project.optional-dependencies]
proxy = ["PySocks==1.7.1"]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.9.7",
]

[project.scripts]
ahab = "ahab:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Pure unit tests (no external dependencies)",
    "integration: Tests requiring a live Docker daemon",
]
addopts = ["-m", "not integration", "--strict-markers"]

[tool.coverage.run]
source = ["ahab"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
]
